--- a/index.html
+++ b/index.html
@@ -21,9 +21,22 @@
     <meta name="theme-color" content="#fafafa" />
   </head>
 
-  <body>
+  <body class="flex min-h-screen flex-col items-stretch gap-4 p-4 sm:flex-row">
     <!-- Add your site or application content here -->
-    <p>Hello world! This is HTML5 Boilerplate.</p>
+    <div
+      class="w-full overflow-hidden rounded p-4 shadow-[0_4px_10px_0_rgba(0,0,0,0.2),0_4px_20px_0_rgba(0,0,0,0.19)] sm:w-1/3 xl:w-1/4"
+    >
+      <div class="mx-12 my-4 overflow-hidden rounded-full">
+        <img src="/img/profile.jpg" />
+      </div>
+      Hello world! This is HTML5 Boilerplate.
+    </div>
+    <div
+      class="flex-grow overflow-hidden rounded p-4 shadow-[0_4px_10px_0_rgba(0,0,0,0.2),0_4px_20px_0_rgba(0,0,0,0.19)]"
+    >
+      Hello world! This is HTML5 Boilerplate.
+    </div>
+
     <script src="js/app.js"></script>
   </body>
 </html>
