--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
       <div class="mx-12 my-4 overflow-hidden rounded-full">
         <img src="/img/profile.jpg" />
       </div>
-      Hello world! This is HTML5 Boilerplate.
+      <h1 class="pb-4 text-2xl">Christian Louise Aranas</h1>
+      <p>Software & Web Developer</p>
+      <p>Cabuyao, Laguna</p>
+      <a href="mailto:aranaschristianlouise@gmail.com"
+        >aranaschristianlouise@gmail.com</a
+      >
+      <p>(+63) 969 643 5518</p>
+      <hr class="my-5" />
     </div>
     <div
       class="flex-grow overflow-hidden rounded p-4 shadow-[0_4px_10px_0_rgba(0,0,0,0.2),0_4px_20px_0_rgba(0,0,0,0.19)]"
