--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div
       class="w-full overflow-hidden rounded p-4 shadow-[0_4px_10px_0_rgba(0,0,0,0.2),0_4px_20px_0_rgba(0,0,0,0.19)] sm:w-1/3 xl:w-1/4"
     >
-      <div class="mx-12 my-4 overflow-hidden rounded-full">
+      <div class="mx-4 my-4 overflow-hidden rounded-full lg:mx-12">
         <img src="/img/profile.jpg" />
       </div>
       <h1 class="pb-4 text-2xl">Christian Louise Aranas</h1>
