Added Skills section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,41 @@
       >
       <p>(+63) 969 643 5518</p>
       <hr class="my-5" />
+      <h2 class="text-xl">Skills</h2>
+      <ul>
+        <li class="py-2">
+          Javascript
+          <div class="overflow-clip rounded-full bg-neutral-200">
+            <div class="w-[80%] bg-blue-600 text-center text-xs text-white">
+              80%
+            </div>
+          </div>
+        </li>
+        <li class="py-2">
+          SQL
+          <div class="overflow-clip rounded-full bg-neutral-200">
+            <div class="w-[80%] bg-blue-600 text-center text-xs text-white">
+              80%
+            </div>
+          </div>
+        </li>
+        <li class="py-2">
+          Flutter
+          <div class="overflow-clip rounded-full bg-neutral-200">
+            <div class="w-[70%] bg-blue-600 text-center text-xs text-white">
+              70%
+            </div>
+          </div>
+        </li>
+        <li class="py-2">
+          Kotlin
+          <div class="overflow-clip rounded-full bg-neutral-200">
+            <div class="w-[60%] bg-blue-600 text-center text-xs text-white">
+              60%
+            </div>
+          </div>
+        </li>
+      </ul>
     </div>
     <div
       class="flex-grow overflow-hidden rounded p-4 shadow-[0_4px_10px_0_rgba(0,0,0,0.2),0_4px_20px_0_rgba(0,0,0,0.19)]"
