Added frameworks and tech section

--- a/index.html
+++ b/index.html
@@ -72,6 +72,87 @@
           </div>
         </li>
       </ul>
+      <h2 class="mt-5 text-xl">Frameworks & Tech Used</h2>
+      <h3 class="py-2">Javascript</h3>
+      <div class="flex flex-wrap gap-2">
+        <span
+          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+        >
+          <p class="whitespace-nowrap text-sm">NodeJS</p>
+        </span>
+        <span
+          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+        >
+          <p class="whitespace-nowrap text-sm">SolidJS</p>
+        </span>
+        <span
+          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+        >
+          <p class="whitespace-nowrap text-sm">ReactJS</p>
+        </span>
+        <span
+          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+        >
+          <p class="whitespace-nowrap text-sm">Express.js</p>
+        </span>
+        <span
+          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+        >
+          <p class="whitespace-nowrap text-sm">Prisma ORM</p>
+        </span>
+        <span
+          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+        >
+          <p class="whitespace-nowrap text-sm">11ty's WebC</p>
+        </span>
+      </div>
+      <h3 class="py-2">HTML/CSS</h3>
+      <div class="flex flex-wrap gap-2">
+        <span
+          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+        >
+          <p class="whitespace-nowrap text-sm">TailwindCSS</p>
+        </span>
+      </div>
+      <h3 class="py-2">Android Kotlin</h3>
+      <div class="flex flex-wrap gap-2">
+        <span
+          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+        >
+          <p class="whitespace-nowrap text-sm">Jetpack Compose</p>
+        </span>
+        <span
+          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+        >
+          <p class="whitespace-nowrap text-sm">Room Persistence Database</p>
+        </span>
+      </div>
+      <h3 class="py-2">Dart</h3>
+      <div class="flex flex-wrap gap-2">
+        <span
+          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+        >
+          <p class="whitespace-nowrap text-sm">Flutter</p>
+        </span>
+      </div>
+      <h3 class="py-2">SQL Databases</h3>
+      <div class="flex flex-wrap gap-2">
+        <span
+          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+        >
+          <p class="whitespace-nowrap text-sm">MySQL</p>
+        </span>
+        <span
+          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+        >
+          <p class="whitespace-nowrap text-sm">PostgreSQL</p>
+        </span>
+        <span
+          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+        >
+          <p class="whitespace-nowrap text-sm">SQLite</p>
+        </span>
+      </div>
     </div>
     <div
       class="flex-grow overflow-hidden rounded p-4 shadow-[0_4px_10px_0_rgba(0,0,0,0.2),0_4px_20px_0_rgba(0,0,0,0.19)]"
