Changed margining of some elements

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         >aranaschristianlouise@gmail.com</a
       >
       <p>(+63) 969 643 5518</p>
-      <hr class="my-5" />
-      <h2 class="text-xl">Skills</h2>
+      <hr class="mt-5" />
+      <h2 class="mt-5 text-xl">Skills</h2>
       <ul>
         <li class="py-2">
           Javascript
