Added github link

--- a/index.html
+++ b/index.html
@@ -32,9 +32,14 @@
       <h1 class="pb-4 text-2xl">Christian Louise Aranas</h1>
       <p>Software & Web Developer</p>
       <p>Cabuyao, Laguna</p>
-      <a href="mailto:aranaschristianlouise@gmail.com"
-        >aranaschristianlouise@gmail.com</a
-      >
+      <div>
+        <a href="mailto:aranaschristianlouise@gmail.com"
+          >aranaschristianlouise@gmail.com</a
+        >
+      </div>
+      <div>
+        <a href="https://github.com/chrsrns/"> https://github.com/chrsrns</a>
+      </div>
       <p>(+63) 969 643 5518</p>
       <hr class="mt-5" />
       <h2 class="mt-5 text-xl">Skills</h2>
