--- a/index.html
+++ b/index.html
@@ -160,9 +160,85 @@
       </div>
     </div>
     <div
-      class="flex-grow overflow-hidden rounded p-4 shadow-[0_4px_10px_0_rgba(0,0,0,0.2),0_4px_20px_0_rgba(0,0,0,0.19)]"
+      class="flex-grow overflow-hidden rounded p-8 shadow-[0_4px_10px_0_rgba(0,0,0,0.2),0_4px_20px_0_rgba(0,0,0,0.19)]"
     >
-      Hello world! This is HTML5 Boilerplate.
+      <h1 class="pb-4 text-2xl">Education</h1>
+      <div class="my-3 flex flex-wrap gap-2">
+        <span
+          class="inline-flex items-center justify-center rounded bg-yellow-100 px-2.5 py-0.5 text-yellow-700"
+        >
+          <p class="whitespace-nowrap text-sm">Tertiary</p>
+        </span>
+        <h2 class="inline-flex text-lg font-bold">STI College Calamba</h2>
+      </div>
+      <p class="mt-2 font-semibold">BS in Computer Engineering</p>
+      <div class="mt-1">
+        <span class="inline-block">
+          <svg
+            fill="currentColor"
+            stroke-width="0"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"
+            style="overflow: visible; color: currentcolor"
+            height="1em"
+            width="1em"
+          >
+            <path
+              d="M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24v40H64C28.7 64 0 92.7 0 128v320c0 35.3 28.7 64 64 64h320c35.3 0 64-28.7 64-64V128c0-35.3-28.7-64-64-64h-40V24c0-13.3-10.7-24-24-24s-24 10.7-24 24v40H152V24zM48 192h80v56H48v-56zm0 104h80v64H48v-64zm128 0h96v64h-96v-64zm144 0h80v64h-80v-64zm80-48h-80v-56h80v56zm0 160v40c0 8.8-7.2 16-16 16h-64v-56h80zm-128 0v56h-96v-56h96zm-144 0v56H64c-8.8 0-16-7.2-16-16v-40h80zm144-160h-96v-56h96v56z"
+            ></path>
+          </svg>
+        </span>
+        <span>2020 - 2024</span>
+      </div>
+      <div class="mt-4">
+        <ul class="ms-4 list-disc">
+          <li>Cum Laude</li>
+          <li>1st Runner-up | Codefest 2022-2023 Local Level</li>
+        </ul>
+        <p class="mt-2">
+          At this institution, I've learned how to design hardware systems, 3D
+          design component chassis, and implement them in the exercises provided
+          by the institution.
+        </p>
+      </div>
+      <div class="mt-3 flex flex-wrap gap-2">
+        <span
+          class="inline-flex items-center justify-center rounded bg-yellow-100 px-2.5 py-0.5 text-yellow-700"
+        >
+          <p class="whitespace-nowrap text-sm">Senior High School</p>
+        </span>
+        <h2 class="inline-flex text-lg font-bold">STI College Calamba</h2>
+      </div>
+      <p class="mt-2 font-semibold">ITMAWD Strand</p>
+      <div class="mt-1">
+        <span class="inline-block">
+          <svg
+            fill="currentColor"
+            stroke-width="0"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"
+            style="overflow: visible; color: currentcolor"
+            height="1em"
+            width="1em"
+          >
+            <path
+              d="M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24v40H64C28.7 64 0 92.7 0 128v320c0 35.3 28.7 64 64 64h320c35.3 0 64-28.7 64-64V128c0-35.3-28.7-64-64-64h-40V24c0-13.3-10.7-24-24-24s-24 10.7-24 24v40H152V24zM48 192h80v56H48v-56zm0 104h80v64H48v-64zm128 0h96v64h-96v-64zm144 0h80v64h-80v-64zm80-48h-80v-56h80v56zm0 160v40c0 8.8-7.2 16-16 16h-64v-56h80zm-128 0v56h-96v-56h96zm-144 0v56H64c-8.8 0-16-7.2-16-16v-40h80zm144-160h-96v-56h96v56z"
+            ></path>
+          </svg>
+        </span>
+        <span>2018 - 2020</span>
+      </div>
+      <div class="mt-4">
+        <ul class="ms-4 list-disc">
+          <li>Cum Laude</li>
+          <li>1st Runner-up | Codefest 2022-2023 Local Level</li>
+        </ul>
+        <p class="mt-2">
+          At this institution, I've learned how to design hardware systems, 3D
+          design component chassis, and implement them in the exercises provided
+          by the institution.
+        </p>
+      </div>
     </div>
 
     <script src="js/app.js"></script>
