--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
   <body class="flex min-h-screen flex-col items-stretch gap-4 p-4 sm:flex-row">
     <!-- Add your site or application content here -->
     <div
-      class="w-full overflow-hidden rounded p-4 shadow-[0_4px_10px_0_rgba(0,0,0,0.2),0_4px_20px_0_rgba(0,0,0,0.19)] sm:w-1/3 xl:w-1/4"
+      class="flex-shrink-0 flex-grow-0 basis-full overflow-hidden rounded p-8 shadow-[0_4px_10px_0_rgba(0,0,0,0.2),0_4px_20px_0_rgba(0,0,0,0.19)] sm:flex-shrink sm:flex-grow sm:basis-0"
     >
-      <div class="mx-4 my-4 overflow-hidden rounded-full lg:mx-12">
+      <div class="mx-4 overflow-hidden rounded-full">
         <img src="/img/profile.jpg" />
       </div>
-      <h1 class="pb-4 text-2xl">Christian Louise Aranas</h1>
+      <h1 class="mt-8 pb-4 text-2xl">Christian Louise Aranas</h1>
       <p>Software & Web Developer</p>
       <p>Cabuyao, Laguna</p>
       <div>
@@ -160,7 +160,7 @@
       </div>
     </div>
     <div
-      class="flex-grow overflow-hidden rounded p-8 shadow-[0_4px_10px_0_rgba(0,0,0,0.2),0_4px_20px_0_rgba(0,0,0,0.19)]"
+      class="flex-shrink-0 flex-grow-0 basis-full overflow-hidden rounded p-8 shadow-[0_4px_10px_0_rgba(0,0,0,0.2),0_4px_20px_0_rgba(0,0,0,0.19)] sm:flex-shrink sm:flex-grow-[2] sm:basis-0"
     >
       <h1 class="pb-4 text-2xl">Education</h1>
       <div class="my-3 flex flex-wrap gap-2">
@@ -230,13 +230,12 @@
       </div>
       <div class="mt-4">
         <ul class="ms-4 list-disc">
-          <li>Cum Laude</li>
-          <li>1st Runner-up | Codefest 2022-2023 Local Level</li>
+          <li>Dean's Lister</li>
         </ul>
         <p class="mt-2">
-          At this institution, I've learned how to design hardware systems, 3D
-          design component chassis, and implement them in the exercises provided
-          by the institution.
+          At this institution, I've learned some fundamentals of some
+          programming concepts, learned several software and web technologies,
+          and provided exercises to challenge my skills.
         </p>
       </div>
     </div>
