Added experience section

--- a/index.html
+++ b/index.html
@@ -238,6 +238,46 @@
           and provided exercises to challenge my skills.
         </p>
       </div>
+      <h1 class="mt-8 text-2xl">Experience</h1>
+      <h2 class="mt-4 inline-flex text-lg font-bold">
+        Freelance Web Developer
+      </h2>
+      <ul class="ms-4 mt-2 list-disc">
+        <li>Worked in React, Prisma, and ExpressJS frameworks.</li>
+        <li>
+          Answered client questions and implemented requested product features.
+        </li>
+        <li>
+          Diagnosed issues in website implementation by employing debugging
+          techniques.
+        </li>
+        <li>Meeting deadlines optimally without being too early.</li>
+      </ul>
+      <h2 class="mt-4 inline-flex text-lg font-bold">
+        On the Job Training @ Lecheria Integrated School
+      </h2>
+      <ul class="ms-4 mt-2 list-disc">
+        <li>
+          Disassembled and reassembled computer equipment between different
+          laboratories.
+        </li>
+        <li>
+          Troubleshooted and fixed problems regarding the school's examination
+          software.
+        </li>
+        <li>
+          Assisted the faculty on conducting their National Learning Camp
+          Assessment.
+        </li>
+        <li>
+          Digitized student grading sheets in preparation for printing to a new
+          document format.
+        </li>
+        <li>
+          Fixed issues on student accounts using the school's admin panel when
+          necessary.
+        </li>
+      </ul>
     </div>
 
     <script src="js/app.js"></script>
