Added projects section

--- a/index.html
+++ b/index.html
@@ -278,6 +278,228 @@
           necessary.
         </li>
       </ul>
+      <h1 class="mt-8 text-2xl">Projects</h1>
+      <div class="glow-on-hover rounded-lg">
+        <article class="group">
+          <div class="p-4">
+            <a href="https://schedule-website-demo.domcloud.dev/">
+              <h3 class="text-lg font-medium text-gray-900">
+                <svg
+                  class="inline-block"
+                  fill="currentColor"
+                  stroke-width="0"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 640 512"
+                  style="overflow: visible; color: currentcolor"
+                  height="1em"
+                  width="1em"
+                >
+                  <path
+                    d="M579.8 267.7c56.5-56.5 56.5-148 0-204.5-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6 31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0l112.3-112.3zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5 50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5l112.2-112.3c31.5-31.5 82.5-31.5 114 0 27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z"
+                  ></path>
+                </svg>
+                Scheduler Website Demo
+              </h3>
+            </a>
+
+            <p class="my-2 text-sm/relaxed text-gray-500">
+              This is a functional, full-stack website that is complete with an
+              interactible calendar, a websocket notification and chat system
+              and roles.
+            </p>
+            <div class="flex flex-wrap gap-2">
+              <span
+                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+              >
+                <p class="whitespace-nowrap text-sm">NodeJS</p>
+              </span>
+              <span
+                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+              >
+                <p class="whitespace-nowrap text-sm">Express</p>
+              </span>
+              <span
+                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+              >
+                <p class="whitespace-nowrap text-sm">Prisma</p>
+              </span>
+              <span
+                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+              >
+                <p class="whitespace-nowrap text-sm">React</p>
+              </span>
+              <span
+                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+              >
+                <p class="whitespace-nowrap text-sm">Bootstrap</p>
+              </span>
+            </div>
+          </div>
+        </article>
+      </div>
+      <div class="glow-on-hover rounded-lg">
+        <article class="group">
+          <div class="p-4">
+            <a href="https://chrsrns.github.io/tailwind-infinix-website/">
+              <h3 class="text-lg font-medium text-gray-900">
+                <svg
+                  class="inline-block"
+                  fill="currentColor"
+                  stroke-width="0"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 640 512"
+                  style="overflow: visible; color: currentcolor"
+                  height="1em"
+                  width="1em"
+                >
+                  <path
+                    d="M579.8 267.7c56.5-56.5 56.5-148 0-204.5-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6 31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0l112.3-112.3zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5 50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5l112.2-112.3c31.5-31.5 82.5-31.5 114 0 27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z"
+                  ></path>
+                </svg>
+                InfiniX - A Gaming Blog Site
+              </h3>
+            </a>
+
+            <p class="my-2 text-sm/relaxed text-gray-500">
+              This is a functional no-JS framework blog site that resembles a
+              Junior High School project of mine under a similar name. The
+              contents of this site is AI generated jsut to showcase its design.
+            </p>
+            <div class="flex flex-wrap gap-2">
+              <span
+                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+              >
+                <p class="whitespace-nowrap text-sm">WebC for HTML</p>
+              </span>
+              <span
+                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+              >
+                <p class="whitespace-nowrap text-sm">TailwindCSS</p>
+              </span>
+              <span
+                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+              >
+                <p class="whitespace-nowrap text-sm">Pure JS</p>
+              </span>
+              <span
+                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+              >
+                <p class="whitespace-nowrap text-sm">Web Components</p>
+              </span>
+            </div>
+          </div>
+        </article>
+      </div>
+      <div class="glow-on-hover rounded-lg">
+        <article class="group">
+          <div class="p-4">
+            <a href="https://github.com/chrsrns/codingencyclopedia">
+              <div class="flex flex-wrap gap-2">
+                <h3 class="text-lg font-medium text-gray-900">
+                  <svg
+                    class="inline-block"
+                    fill="currentColor"
+                    stroke-width="0"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 640 512"
+                    style="overflow: visible; color: currentcolor"
+                    height="1em"
+                    width="1em"
+                  >
+                    <path
+                      d="M579.8 267.7c56.5-56.5 56.5-148 0-204.5-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6 31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0l112.3-112.3zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5 50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5l112.2-112.3c31.5-31.5 82.5-31.5 114 0 27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z"
+                    ></path>
+                  </svg>
+                  Coding Encyclopedia
+                </h3>
+                <span
+                  class="inline-flex items-center justify-center rounded-full bg-yellow-100 px-2.5 py-0.5 text-yellow-700"
+                >
+                  <p class="whitespace-nowrap text-sm">Preview not available</p>
+                </span>
+              </div>
+            </a>
+
+            <p class="my-2 text-sm/relaxed text-gray-500">
+              This is simplified, debranded version of a previous project that I
+              did. This is an Android app that categorizes programming-related
+              terms, lists them, and provides their definitions.
+            </p>
+            <div class="flex flex-wrap gap-2">
+              <span
+                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+              >
+                <p class="whitespace-nowrap text-sm">Kotlin</p>
+              </span>
+              <span
+                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+              >
+                <p class="whitespace-nowrap text-sm">Android Studio</p>
+              </span>
+              <span
+                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+              >
+                <p class="whitespace-nowrap text-sm">Jetpack Compose</p>
+              </span>
+              <span
+                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+              >
+                <p class="whitespace-nowrap text-sm">
+                  Room Persistence Database
+                </p>
+              </span>
+            </div>
+          </div>
+        </article>
+      </div>
+      <div class="glow-on-hover rounded-lg">
+        <article class="group">
+          <div class="p-4">
+            <a href="https://chrsrns.github.io/habit-tracker-flutter/">
+              <h3 class="text-lg font-medium text-gray-900">
+                <svg
+                  class="inline-block"
+                  fill="currentColor"
+                  stroke-width="0"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 640 512"
+                  style="overflow: visible; color: currentcolor"
+                  height="1em"
+                  width="1em"
+                >
+                  <path
+                    d="M579.8 267.7c56.5-56.5 56.5-148 0-204.5-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6 31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0l112.3-112.3zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5 50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5l112.2-112.3c31.5-31.5 82.5-31.5 114 0 27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z"
+                  ></path>
+                </svg>
+                CoHabit - Habit Tracking Application
+              </h3>
+            </a>
+
+            <p class="my-2 text-sm/relaxed text-gray-500">
+              This is a small project written in Dart and the Flutter framework.
+              The persistence is done locally using SQLite3 and plain SQL
+              statements; mainly because I wanted to plactice them.
+            </p>
+            <div class="flex flex-wrap gap-2">
+              <span
+                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+              >
+                <p class="whitespace-nowrap text-sm">Dart</p>
+              </span>
+              <span
+                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+              >
+                <p class="whitespace-nowrap text-sm">Flutter</p>
+              </span>
+              <span
+                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+              >
+                <p class="whitespace-nowrap text-sm">SQL</p>
+              </span>
+            </div>
+          </div>
+        </article>
+      </div>
     </div>
 
     <script src="js/app.js"></script>
