Updated projects section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </ul>
       <h2 class="mt-5 text-xl">Frameworks & Tech Used</h2>
       <h3 class="py-2">Javascript</h3>
-      <div class="flex flex-wrap gap-2">
+      <div class="my-2 flex flex-wrap gap-2">
         <span
           class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
         >
@@ -281,7 +281,7 @@
       <h1 class="mt-8 text-2xl">Projects</h1>
       <div class="glow-on-hover rounded-lg">
         <article class="group">
-          <div class="p-4">
+          <div class="px-4 pt-4">
             <a href="https://schedule-website-demo.domcloud.dev/">
               <h3 class="text-lg font-medium text-gray-900">
                 <svg
@@ -302,11 +302,6 @@
               </h3>
             </a>
 
-            <p class="my-2 text-sm/relaxed text-gray-500">
-              This is a functional, full-stack website that is complete with an
-              interactible calendar, a websocket notification and chat system
-              and roles.
-            </p>
             <div class="flex flex-wrap gap-2">
               <span
                 class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
@@ -339,7 +334,7 @@
       </div>
       <div class="glow-on-hover rounded-lg">
         <article class="group">
-          <div class="p-4">
+          <div class="px-4 pt-4">
             <a href="https://chrsrns.github.io/tailwind-infinix-website/">
               <h3 class="text-lg font-medium text-gray-900">
                 <svg
@@ -359,12 +354,6 @@
                 InfiniX - A Gaming Blog Site
               </h3>
             </a>
-
-            <p class="my-2 text-sm/relaxed text-gray-500">
-              This is a functional no-JS framework blog site that resembles a
-              Junior High School project of mine under a similar name. The
-              contents of this site is AI generated jsut to showcase its design.
-            </p>
             <div class="flex flex-wrap gap-2">
               <span
                 class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
@@ -392,9 +381,9 @@
       </div>
       <div class="glow-on-hover rounded-lg">
         <article class="group">
-          <div class="p-4">
+          <div class="px-4 pt-4">
             <a href="https://github.com/chrsrns/codingencyclopedia">
-              <div class="flex flex-wrap gap-2">
+              <div class="my-2 flex flex-wrap gap-2">
                 <h3 class="text-lg font-medium text-gray-900">
                   <svg
                     class="inline-block"
@@ -415,17 +404,11 @@
                 <span
                   class="inline-flex items-center justify-center rounded-full bg-yellow-100 px-2.5 py-0.5 text-yellow-700"
                 >
-                  <p class="whitespace-nowrap text-sm">Preview not available</p>
+                  <p class="whitespace-nowrap text-sm">No Preview</p>
                 </span>
               </div>
             </a>
-
-            <p class="my-2 text-sm/relaxed text-gray-500">
-              This is simplified, debranded version of a previous project that I
-              did. This is an Android app that categorizes programming-related
-              terms, lists them, and provides their definitions.
-            </p>
-            <div class="flex flex-wrap gap-2">
+            <div class="my-2 flex flex-wrap gap-2">
               <span
                 class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
               >
@@ -454,7 +437,7 @@
       </div>
       <div class="glow-on-hover rounded-lg">
         <article class="group">
-          <div class="p-4">
+          <div class="px-4 pt-4">
             <a href="https://chrsrns.github.io/habit-tracker-flutter/">
               <h3 class="text-lg font-medium text-gray-900">
                 <svg
@@ -474,13 +457,7 @@
                 CoHabit - Habit Tracking Application
               </h3>
             </a>
-
-            <p class="my-2 text-sm/relaxed text-gray-500">
-              This is a small project written in Dart and the Flutter framework.
-              The persistence is done locally using SQLite3 and plain SQL
-              statements; mainly because I wanted to plactice them.
-            </p>
-            <div class="flex flex-wrap gap-2">
+            <div class="my-2 flex flex-wrap gap-2">
               <span
                 class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
               >
