Changed profile picture URL

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       class="flex-shrink-0 flex-grow-0 basis-full overflow-hidden rounded p-8 shadow-[0_4px_10px_0_rgba(0,0,0,0.2),0_4px_20px_0_rgba(0,0,0,0.19)] sm:flex-shrink sm:flex-grow sm:basis-0"
     >
       <div class="mx-4 overflow-hidden rounded-full">
-        <img src="/img/profile.jpg" />
+        <img src="/css-resume/img/profile.jpg" />
       </div>
       <h1 class="mt-8 pb-4 text-2xl">Christian Louise Aranas</h1>
       <p>Software & Web Developer</p>
