Break long email address if necessary

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
       <p>Software & Web Developer</p>
       <p>Cabuyao, Laguna</p>
       <div>
-        <a href="mailto:aranaschristianlouise@gmail.com"
+        <a
+          class="text-wrap break-words"
+          href="mailto:aranaschristianlouise@gmail.com"
           >aranaschristianlouise@gmail.com</a
         >
       </div>
