Hidden some elements on print

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <a href="https://schedule-website-demo.domcloud.dev/">
               <h3 class="text-lg font-medium text-gray-900">
                 <svg
-                  class="inline-block"
+                  class="inline-block print:hidden"
                   fill="currentColor"
                   stroke-width="0"
                   xmlns="http://www.w3.org/2000/svg"
@@ -340,7 +340,7 @@
             <a href="https://chrsrns.github.io/tailwind-infinix-website/">
               <h3 class="text-lg font-medium text-gray-900">
                 <svg
-                  class="inline-block"
+                  class="inline-block print:hidden"
                   fill="currentColor"
                   stroke-width="0"
                   xmlns="http://www.w3.org/2000/svg"
@@ -388,7 +388,7 @@
               <div class="my-2 flex flex-wrap gap-2">
                 <h3 class="text-lg font-medium text-gray-900">
                   <svg
-                    class="inline-block"
+                    class="inline-block print:hidden"
                     fill="currentColor"
                     stroke-width="0"
                     xmlns="http://www.w3.org/2000/svg"
@@ -404,7 +404,7 @@
                   Coding Encyclopedia
                 </h3>
                 <span
-                  class="inline-flex items-center justify-center rounded-full bg-yellow-100 px-2.5 py-0.5 text-yellow-700"
+                  class="inline-flex items-center justify-center rounded-full bg-yellow-100 px-2.5 py-0.5 text-yellow-700 print:hidden"
                 >
                   <p class="whitespace-nowrap text-sm">No Preview</p>
                 </span>
@@ -443,7 +443,7 @@
             <a href="https://chrsrns.github.io/habit-tracker-flutter/">
               <h3 class="text-lg font-medium text-gray-900">
                 <svg
-                  class="inline-block"
+                  class="inline-block print:hidden"
                   fill="currentColor"
                   stroke-width="0"
                   xmlns="http://www.w3.org/2000/svg"
