Print specific margins for some headings

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
     <div
       class="flex-shrink-0 flex-grow-0 basis-full overflow-hidden rounded p-8 shadow-[0_4px_10px_0_rgba(0,0,0,0.2),0_4px_20px_0_rgba(0,0,0,0.19)] sm:flex-shrink sm:flex-grow-[2] sm:basis-0"
     >
-      <h1 class="pb-4 text-2xl">Education</h1>
-      <div class="my-3 flex flex-wrap gap-2">
+      <h1 class="text-2xl">Education</h1>
+      <div class="mb-3 mt-8 flex flex-wrap gap-2 print:mt-4">
         <span
           class="inline-flex items-center justify-center rounded bg-yellow-100 px-2.5 py-0.5 text-yellow-700"
         >
@@ -240,7 +240,7 @@
           and provided exercises to challenge my skills.
         </p>
       </div>
-      <h1 class="mt-8 text-2xl">Experience</h1>
+      <h1 class="mt-8 text-2xl print:mt-4">Experience</h1>
       <h2 class="mt-4 inline-flex text-lg font-bold">
         Freelance Web Developer
       </h2>
