Print specific content on projects section

--- a/index.html
+++ b/index.html
@@ -280,7 +280,29 @@
           necessary.
         </li>
       </ul>
-      <h1 class="mt-8 text-2xl">Projects</h1>
+      <a href="https://chrsrns.github.io/personal-projects-portal/">
+        <h1 class="mt-8 text-2xl print:mt-4">
+          <svg
+            class="inline-block print:hidden"
+            fill="currentColor"
+            stroke-width="0"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 640 512"
+            style="overflow: visible; color: currentcolor"
+            height="1em"
+            width="1em"
+          >
+            <path
+              d="M579.8 267.7c56.5-56.5 56.5-148 0-204.5-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6 31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0l112.3-112.3zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5 50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5l112.2-112.3c31.5-31.5 82.5-31.5 114 0 27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z"
+            ></path>
+          </svg>
+          Projects
+        </h1>
+        <p class="hidden text-sm print:block">
+          Projects Portal Github Link:
+          https://chrsrns.github.io/personal-projects-portal/
+        </p>
+      </a>
       <div class="glow-on-hover rounded-lg">
         <article class="group">
           <div class="px-4 pt-4">
@@ -300,8 +322,11 @@
                     d="M579.8 267.7c56.5-56.5 56.5-148 0-204.5-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6 31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0l112.3-112.3zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5 50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5l112.2-112.3c31.5-31.5 82.5-31.5 114 0 27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z"
                   ></path>
                 </svg>
-                Scheduler Website Demo
+                Scheduler Website
               </h3>
+              <p class="hidden text-sm print:block">
+                Github Link: https://schedule-website-demo.domcloud.dev/
+              </p>
             </a>
 
             <div class="flex flex-wrap gap-2">
@@ -355,6 +380,9 @@
                 </svg>
                 InfiniX - A Gaming Blog Site
               </h3>
+              <p class="hidden text-sm print:block">
+                Github Link: https://chrsrns.github.io/tailwind-infinix-website/
+              </p>
             </a>
             <div class="flex flex-wrap gap-2">
               <span
@@ -385,8 +413,10 @@
         <article class="group">
           <div class="px-4 pt-4">
             <a href="https://github.com/chrsrns/codingencyclopedia">
-              <div class="my-2 flex flex-wrap gap-2">
-                <h3 class="text-lg font-medium text-gray-900">
+              <div class="my-2 gap-2">
+                <h3
+                  class="inline-block text-lg font-medium text-gray-900 print:block"
+                >
                   <svg
                     class="inline-block print:hidden"
                     fill="currentColor"
@@ -404,10 +434,14 @@
                   Coding Encyclopedia
                 </h3>
                 <span
-                  class="inline-flex items-center justify-center rounded-full bg-yellow-100 px-2.5 py-0.5 text-yellow-700 print:hidden"
+                  class="inline-block items-center justify-center rounded-full bg-yellow-100 px-2.5 py-0.5 text-yellow-700 print:hidden"
                 >
                   <p class="whitespace-nowrap text-sm">No Preview</p>
                 </span>
+
+                <p class="hidden text-sm print:block">
+                  Github Link: https://github.com/chrsrns/codingencyclopedia
+                </p>
               </div>
             </a>
             <div class="my-2 flex flex-wrap gap-2">
@@ -458,6 +492,9 @@
                 </svg>
                 CoHabit - Habit Tracking Application
               </h3>
+              <p class="hidden text-sm print:block">
+                Github Link: https://chrsrns.github.io/habit-tracker-flutter/
+              </p>
             </a>
             <div class="my-2 flex flex-wrap gap-2">
               <span
