Print specific margins for some elements

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </span>
         <span>2020 - 2024</span>
       </div>
-      <div class="mt-4">
+      <div class="mt-4 print:mt-2">
         <ul class="ms-4 list-disc">
           <li>Cum Laude</li>
           <li>1st Runner-up | Codefest 2022-2023 Local Level</li>
@@ -230,7 +230,7 @@
         </span>
         <span>2018 - 2020</span>
       </div>
-      <div class="mt-4">
+      <div class="mt-4 print:mt-2">
         <ul class="ms-4 list-disc">
           <li>Dean's Lister</li>
         </ul>
@@ -241,7 +241,7 @@
         </p>
       </div>
       <h1 class="mt-8 text-2xl print:mt-4">Experience</h1>
-      <h2 class="mt-4 inline-flex text-lg font-bold">
+      <h2 class="mt-4 inline-flex text-lg font-bold print:mt-2">
         Freelance Web Developer
       </h2>
       <ul class="ms-4 mt-2 list-disc">
@@ -255,7 +255,7 @@
         </li>
         <li>Meeting deadlines optimally without being too early.</li>
       </ul>
-      <h2 class="mt-4 inline-flex text-lg font-bold">
+      <h2 class="mt-4 inline-flex text-lg font-bold print:mt-2">
         On the Job Training @ Lecheria Integrated School
       </h2>
       <ul class="ms-4 mt-2 list-disc">
@@ -305,7 +305,7 @@
       </a>
       <div class="glow-on-hover rounded-lg">
         <article class="group">
-          <div class="px-4 pt-4">
+          <div class="px-4 pt-4 print:pt-2">
             <a href="https://schedule-website-demo.domcloud.dev/">
               <h3 class="text-lg font-medium text-gray-900">
                 <svg
@@ -361,7 +361,7 @@
       </div>
       <div class="glow-on-hover rounded-lg">
         <article class="group">
-          <div class="px-4 pt-4">
+          <div class="px-4 pt-4 print:pt-2">
             <a href="https://chrsrns.github.io/tailwind-infinix-website/">
               <h3 class="text-lg font-medium text-gray-900">
                 <svg
@@ -411,7 +411,7 @@
       </div>
       <div class="glow-on-hover rounded-lg">
         <article class="group">
-          <div class="px-4 pt-4">
+          <div class="px-4 pt-4 print:pt-2">
             <a href="https://github.com/chrsrns/codingencyclopedia">
               <div class="my-2 gap-2">
                 <h3
@@ -473,7 +473,7 @@
       </div>
       <div class="glow-on-hover rounded-lg">
         <article class="group">
-          <div class="px-4 pt-4">
+          <div class="px-4 pt-4 print:pt-2">
             <a href="https://chrsrns.github.io/habit-tracker-flutter/">
               <h3 class="text-lg font-medium text-gray-900">
                 <svg
