Fixed inconsistent margins

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       class="flex-shrink-0 flex-grow-0 basis-full overflow-hidden rounded p-8 shadow-[0_4px_10px_0_rgba(0,0,0,0.2),0_4px_20px_0_rgba(0,0,0,0.19)] sm:flex-shrink sm:flex-grow-[2] sm:basis-0"
     >
       <h1 class="text-2xl">Education</h1>
-      <div class="mb-3 mt-8 flex flex-wrap gap-2 print:mt-4">
+      <div class="my-4 flex flex-wrap gap-2 print:my-3">
         <span
           class="inline-flex items-center justify-center rounded bg-yellow-100 px-2.5 py-0.5 text-yellow-700"
         >
@@ -203,7 +203,7 @@
           by the institution.
         </p>
       </div>
-      <div class="mt-3 flex flex-wrap gap-2">
+      <div class="my-4 flex flex-wrap gap-2 print:my-3">
         <span
           class="inline-flex items-center justify-center rounded bg-yellow-100 px-2.5 py-0.5 text-yellow-700"
         >
