--- a/index.html
+++ b/index.html
@@ -30,19 +30,110 @@
         <img src="/css-resume/img/profile.jpg" />
       </div>
       <h1 class="mt-8 pb-4 text-2xl">Christian Louise Aranas</h1>
-      <p>Software & Web Developer</p>
-      <p>Cabuyao, Laguna</p>
+      <div>
+        <i class="me-2 inline-block h-full align-middle">
+          <svg
+            fill="currentColor"
+            stroke-width="0"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 512 512"
+            style="overflow: visible; color: currentcolor"
+            height="1em"
+            width="1em"
+          >
+            <path
+              d="M176 56v40h160V56c0-4.4-3.6-8-8-8H184c-4.4 0-8 3.6-8 8zm-48 40V56c0-30.9 25.1-56 56-56h144c30.9 0 56 25.1 56 56v424H128V96zm-64 0h32v384H64c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64zm384 384h-32V96h32c35.3 0 64 28.7 64 64v256c0 35.3-28.7 64-64 64z"
+            ></path>
+          </svg>
+        </i>
+        <span class="inline-block align-middle">Software </span>
+        <span class="inline-block align-middle"> & Web </span>
+        <span class="inline-block align-middle"> Developer</span>
+      </div>
+
+      <div>
+        <i class="me-2 inline-block h-full align-middle">
+          <svg
+            fill="currentColor"
+            stroke-width="0"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 384 512"
+            style="overflow: visible; color: currentcolor"
+            height="1em"
+            width="1em"
+          >
+            <path
+              d="M384 192c0 87.4-117 243-168.3 307.2-12.3 15.3-35.1 15.3-47.4 0C117 435 0 279.4 0 192 0 86 86 0 192 0s192 86 192 192z"
+            ></path>
+          </svg>
+        </i>
+        <span class="inline-block align-middle">Cabuyao, </span>
+        <span class="inline-block align-middle">Laguna</span>
+      </div>
       <div>
         <a
           class="text-wrap break-words"
           href="mailto:aranaschristianlouise@gmail.com"
-          >aranaschristianlouise@gmail.com</a
         >
+          <i class="me-2 inline-block h-full align-middle">
+            <svg
+              fill="currentColor"
+              stroke-width="0"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"
+              style="overflow: visible; color: currentcolor"
+              height="1em"
+              width="1em"
+            >
+              <path
+                d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4l217.6 163.2c11.4 8.5 27 8.5 38.4 0l217.6-163.2c12.1-9.1 19.2-23.3 19.2-38.4 0-26.5-21.5-48-48-48H48zM0 176v208c0 35.3 28.7 64 64 64h384c35.3 0 64-28.7 64-64V176L294.4 339.2a63.9 63.9 0 0 1-76.8 0L0 176z"
+              ></path>
+            </svg>
+          </i>
+          <span class="inline-block align-middle">aranaschristianlouise</span
+          ><span class="inline-block align-middle">@gmail.com </span>
+        </a>
       </div>
       <div>
-        <a href="https://github.com/chrsrns/"> https://github.com/chrsrns</a>
+        <a href="https://github.com/chrsrns/">
+          <i class="me-2 inline-block h-full align-middle">
+            <svg
+              fill="currentColor"
+              stroke-width="0"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 496 512"
+              style="overflow: visible; color: currentcolor"
+              height="1em"
+              width="1em"
+            >
+              <path
+                d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
+              ></path>
+            </svg>
+          </i>
+          <span class="inline-block align-middle">
+            https://github.com/chrsrns
+          </span>
+        </a>
       </div>
-      <p>(+63) 969 643 5518</p>
+      <div>
+        <i class="me-2 inline-block h-full align-middle">
+          <svg
+            fill="currentColor"
+            stroke-width="0"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 384 512"
+            style="overflow: visible; color: currentcolor"
+            height="1em"
+            width="1em"
+          >
+            <path
+              d="M16 64C16 28.7 44.7 0 80 0h224c35.3 0 64 28.7 64 64v384c0 35.3-28.7 64-64 64H80c-35.3 0-64-28.7-64-64V64zm208 384a32 32 0 1 0-64 0 32 32 0 1 0 64 0zm80-384H80v320h224V64z"
+            ></path>
+          </svg>
+        </i>
+        <span class="inline-block align-middle"> (+63) 969 643 5518 </span>
+      </div>
       <hr class="mt-5" />
       <h2 class="mt-5 text-xl">Skills</h2>
       <ul>
@@ -164,7 +255,24 @@
     <div
       class="flex-shrink-0 flex-grow-0 basis-full overflow-hidden rounded p-8 shadow-[0_4px_10px_0_rgba(0,0,0,0.2),0_4px_20px_0_rgba(0,0,0,0.19)] sm:flex-shrink sm:flex-grow-[2] sm:basis-0"
     >
-      <h1 class="text-2xl">Education</h1>
+      <h1 class="text-2xl">
+        <i class="me-2 inline-block h-full align-middle">
+          <svg
+            fill="currentColor"
+            stroke-width="0"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 512 512"
+            style="overflow: visible; color: currentcolor"
+            height="1em"
+            width="1em"
+          >
+            <path
+              d="M211 7.3C205 1 196-1.4 187.6.8s-14.9 8.9-17.1 17.3l-15.8 62.5-62-17.5c-8.4-2.4-17.4 0-23.5 6.1s-8.5 15.1-6.1 23.5l17.5 62-62.5 15.9c-8.4 2.1-15 8.7-17.3 17.1S1 205 7.3 211l46.2 45-46.2 45c-6.3 6-8.7 15-6.5 23.4s8.9 14.9 17.3 17.1l62.5 15.8-17.5 62c-2.4 8.4 0 17.4 6.1 23.5s15.1 8.5 23.5 6.1l62-17.5 15.8 62.5c2.1 8.4 8.7 15 17.1 17.3s17.3-.2 23.4-6.4l45-46.2 45 46.2c6.1 6.2 15 8.7 23.4 6.4s14.9-8.9 17.1-17.3l15.8-62.5 62 17.5c8.4 2.4 17.4 0 23.5-6.1s8.5-15.1 6.1-23.5l-17.5-62 62.5-15.8c8.4-2.1 15-8.7 17.3-17.1s-.2-17.3-6.4-23.4l-46.2-45 46.2-45c6.2-6.1 8.7-15 6.4-23.4s-8.9-14.9-17.3-17.1l-62.5-15.8 17.5-62c2.4-8.4 0-17.4-6.1-23.5s-15.1-8.5-23.5-6.1l-62 17.5-15.9-62.5c-2.1-8.4-8.7-15-17.1-17.3S307 1 301 7.3l-45 46.2-45-46.2z"
+            ></path>
+          </svg>
+        </i>
+        <span class="inline-block align-middle">Education</span>
+      </h1>
       <div class="my-4 flex flex-wrap gap-2 print:my-3">
         <span
           class="inline-flex items-center justify-center rounded bg-yellow-100 px-2.5 py-0.5 text-yellow-700"
@@ -240,7 +348,24 @@
           and provided exercises to challenge my skills.
         </p>
       </div>
-      <h1 class="mt-8 text-2xl print:mt-4">Experience</h1>
+      <h1 class="mt-8 text-2xl print:mt-4">
+        <i class="me-2 inline-block h-full align-middle">
+          <svg
+            fill="currentColor"
+            stroke-width="0"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 512 512"
+            style="overflow: visible; color: currentcolor"
+            height="1em"
+            width="1em"
+          >
+            <path
+              d="M176 56v40h160V56c0-4.4-3.6-8-8-8H184c-4.4 0-8 3.6-8 8zm-48 40V56c0-30.9 25.1-56 56-56h144c30.9 0 56 25.1 56 56v424H128V96zm-64 0h32v384H64c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64zm384 384h-32V96h32c35.3 0 64 28.7 64 64v256c0 35.3-28.7 64-64 64z"
+            ></path>
+          </svg>
+        </i>
+        <span class="inline-block align-middle">Experience</span>
+      </h1>
       <h2 class="mt-4 inline-flex text-lg font-bold print:mt-2">
         Freelance Web Developer
       </h2>
