--- a/index.html
+++ b/index.html
@@ -406,22 +406,25 @@
         </li>
       </ul>
       <a href="https://chrsrns.github.io/personal-projects-portal/">
-        <h1 class="mt-8 text-2xl print:mt-4">
-          <svg
-            class="inline-block print:hidden"
-            fill="currentColor"
-            stroke-width="0"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 640 512"
-            style="overflow: visible; color: currentcolor"
-            height="1em"
-            width="1em"
-          >
-            <path
-              d="M579.8 267.7c56.5-56.5 56.5-148 0-204.5-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6 31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0l112.3-112.3zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5 50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5l112.2-112.3c31.5-31.5 82.5-31.5 114 0 27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z"
-            ></path>
-          </svg>
-          Projects
+        <h1
+          class="mt-8 w-fit border-b-2 border-b-black pe-1 text-2xl print:mt-4 print:border-b-0"
+        >
+          <i class="me-2 inline-block h-full align-middle">
+            <svg
+              fill="currentColor"
+              stroke-width="0"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"
+              style="overflow: visible; color: currentcolor"
+              height="1em"
+              width="1em"
+            >
+              <path
+                d="M32 32h448c17.7 0 32 14.3 32 32v32c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32V64c0-17.7 14.3-32 32-32zm0 128h448v256c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V160zm128 80c0 8.8 7.2 16 16 16h160c8.8 0 16-7.2 16-16s-7.2-16-16-16H176c-8.8 0-16 7.2-16 16z"
+              ></path>
+            </svg>
+          </i>
+          <span class="inline-block align-middle"> Projects</span>
         </h1>
         <p class="hidden text-sm print:block">
           Projects Portal Github Link:
