Added ping element for projects section

--- a/index.html
+++ b/index.html
@@ -407,8 +407,16 @@
       </ul>
       <a href="https://chrsrns.github.io/personal-projects-portal/">
         <h1
-          class="mt-8 w-fit border-b-2 border-b-black pe-1 text-2xl print:mt-4 print:border-b-0"
+          class="relative mt-8 w-fit border-b-2 border-b-black pe-1 text-2xl print:mt-4 print:border-b-0"
         >
+          <span class="absolute -right-4 flex h-3 w-3 print:hidden">
+            <span
+              class="absolute inline-flex h-full w-full animate-ping rounded-full bg-sky-400 opacity-75"
+            ></span>
+            <span
+              class="relative inline-flex h-3 w-3 rounded-full bg-sky-500"
+            ></span>
+          </span>
           <i class="me-2 inline-block h-full align-middle">
             <svg
               fill="currentColor"
